--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,10 @@ paginate_path: "page/:num/"
 
 # Comment
 comment:
-    disqus: JacobKong_Dev
-    # duoshuo: 
+    #disqus: JacobKong_Dev
+    provider : duoshuo
+    duoshuo :
+        short_name : jacobkong
     
 # Social
 social:
