--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: JacobKong's Blog
 subtitle: 给今天的你一个机会，去感谢昨天努力的自己！
 welcome_message: <a href="http://www.jianshu.com/users/81a8d024af56/latest_articles" target="_blank">也欢迎来我的简书转转！</a>
 description: 欢迎来到孔伟杰(@JacobKong_Dev)的博客，目前大四，之前热爱iOS开发:)，目前在学习“机器学习与数据挖掘”领域的相关知识。
-creator: <a href="http://onev.cat">@onevcat</a>
+creator: <a href="https://twitter.com/JacobKong_Dev">@JacobKong_Dev</a>
 
 url: "http://www.jacobkong.com"
 
