--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ comment:
     
 # Social
 social:
-    weibo: JacobKong_Dev
+    weibo: u/2232756824
     github: JacobKong
     twitter: JacobKong_Dev
     gplus: 109632666247925107848
